# Rust-2D-Game-Engine---Learn

./: .gitignore  BILLBOARD_READY.md  CAMERA_CONTROLS_GUIDE.md  CAMERA_FRUSTUM_ORIGIN_COMPLETE_FIX.md  CAMERA_GIZMO_DEPTH_FIX.md  CONSOLE_SYSTEM.md  Cargo.toml  DRAG_DROP_COMPLETE.md  ECS_PERFORMANCE_TEST_RESULTS.md  EDITOR_UPGRADE_PROGRESS.md  FINAL_MIGRATION_COMPLETION_REPORT.md  GRID_COMPONENT_CHANGES.md  Game_Engine_Design.md  HOW_TO_SEE_GRID_COMPONENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  MIGRATION_COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_SETTINGS_DROPDOWN.md  ROADMAP.md  SAVE_AUTOSAVE_EXIT_COMPLETE.md  SCENE_FILE_FIX.md  SCENE_SYSTEM_FIX.md  SPRITE_BILLBOARD_GUIDE.md  TILEMAP_3D_ORIENTATION_FIX.md  TILEMAP_GRID_ALIGNMENT_FIX.md  TODO.md  UI_IMPROVEMENTS.md  UNITY_LIKE_EDITOR_UPGRADE.md  UNITY_STYLE_HIERARCHY.md  XS_GAME_ENGINE_PLAN.md  XS_GAME_ENGINE_PLAND_UPODATE.md  bench_output.txt  bench_results.txt  bench_results_2.txt  bench_results_3.txt  bench_results_final.txt  bench_results_final_2.txt  build_log.txt  check_editor_final.txt  (+52 more)
ecs/: BENCHMARK_RESULTS.md  Cargo.toml  LDTK_HOT_RELOAD.md  LDTK_HOT_RELOAD_FIX.md  MIGRATION_TO_HECS.md  README.md  README_TILEMAP.md  SPRITE_TILEMAP_USAGE.md  TILEMAP_COLLIDER_USAGE.md  benchmark_results.txt  build_log.txt  log.txt  test_sprite.sprite
ecs/benches/: ecs_benchmark.rs
ecs/examples/: animated_tilemap_demo.rs  backend_chooser.rs  component_management.rs  ldtk_hot_reload.rs  load_ldtk_map.rs  migration_example.rs  sprite_sheet_loading.rs  unified_rendering_demo.rs
ecs/src/: benchmark_runner.rs  component_manager.rs  lib.rs  traits.rs  unified_rendering_helpers.rs
ecs/src/backends/: bevy_backend.rs  chooser.rs  hecs_backend.rs  hecs_minimal.rs  mod.rs  specs_backend.rs
ecs/src/components/: collider_3d.rs  grid.rs  ldtk_entity.rs  ldtk_map.rs  light.rs  map.rs  mod.rs  sprite_sheet.rs  tilemap.rs  tilemap_collider.rs  unified_rendering.rs  visible.rs  world_ui.rs
ecs/src/loaders/: ldtk_hot_reload.rs  ldtk_loader.rs  mod.rs  tiled_loader.rs
ecs/src/systems/: mod.rs  tilemap_animation.rs
editor/: Cargo.toml
editor/src/: app.rs  asset_manager.rs  autosave.rs  clipboard.rs  debug_draw.rs  drag_drop.rs  editor_logic.rs  game_view_renderer.rs  grid.rs  hot_reload.rs  lib.rs  main.rs  map_manager.rs  prefab.rs  scene_view_renderer.rs  selection.rs  shortcuts_handler.rs  snapping.rs  sprite_editor_window.rs  states.rs  texture_import_settings.rs  theme.rs  toolbar.rs
editor/src/assets/: database.rs
editor/src/systems/: camera.rs  clipboard.rs  menu_commands.rs  mod.rs  play_mode.rs
editor/src/tools/: mod.rs  selection.rs  snapping.rs
editor/src/ui/: bottom_panel.rs  camera_settings.rs  collider_settings_panel.rs  dock_layout.rs  mod.rs  (+15 more)
engine/: Cargo.toml  EXPORT_FUNCTIONALITY_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  SCENE_VIEW_OPTIMIZATIONS.md
engine/benches/: scene_view_performance.rs
engine/examples/: physics_demo.rs
engine/src/: console.rs  lib.rs  main.rs  texture_manager.rs  ui_manager.rs
engine/tests/: bounds_rendering_properties.proptest-regressions  bounds_rendering_properties.rs  camera_properties.proptest-regressions  camera_properties.rs  camera_state_display_tests.rs  camera_unit_tests.rs  depth_sorting_properties.rs  error_handling_tests.rs  grid_projection_tests.rs  grid_properties.proptest-regressions  grid_properties.rs  grid_unit_tests.rs  infinite_grid_properties.proptest-regressions  infinite_grid_properties.rs  line_batching_tests.rs  perfect_pixel_properties.proptest-regressions  perfect_pixel_properties.rs  render_queue_properties.rs  rendering_3d_properties.rs  scene_view_3d_integration_tests.rs  sprite_3d_properties.rs  sprite_drag_drop_tests.rs  sprite_editor_export_tests.rs  sprite_editor_toolbar_tests.rs  sprite_list_ui_tests.rs  tilemap_3d_properties.proptest-regressions  tilemap_3d_properties.rs  tilemap_error_tests.rs  tilemap_management_properties.rs  tilemap_management_unit_tests.rs
engine_core/: Cargo.toml
engine_core/src/: assets.rs  lib.rs  project.rs
profiler/: Cargo.toml
profiler/src/: gpu.rs  lib.rs  macros.rs  memory.rs
render/: Cargo.toml
render/src/: batch_optimization.rs  batch_renderer.rs  bloom_renderer.rs  camera.rs  cluster_culling.wgsl  cluster_renderer.rs  depth_sorting.rs  grid.wgsl  grid_renderer.rs  lib.rs  lighting.rs  material.rs  mesh.rs  mesh_generation.rs  mesh_renderer.rs  mixed_content_renderer.rs  pbr.wgsl  post_process_renderer.rs  shader.wgsl  simple_sprite_shader.wgsl  sprite_renderer.rs  sprite_shader.wgsl  texture.rs  tilemap_gpu.wgsl  tilemap_renderer.rs  tilemap_shader.wgsl  toon.wgsl  unified_renderer.rs  unified_shader.wgsl  unified_texture_integration.rs  unified_texture_manager.rs  unified_tilemap.wgsl
script/: Cargo.toml
script/src/: lib.rs  rapier_bindings.rs
sprite_editor/: Cargo.toml
sprite_editor/src/: auto_slicer.rs  lib.rs  metadata.rs  statistics.rs  utils.rs
ui/: API_CHANGES.md  BATCH_CONVERSION_IMPLEMENTATION.md  CLI_MIGRATION_TOOL.md  CLI_TOOL_IMPLEMENTATION_SUMMARY.md  Cargo.toml  EXAMPLES_GUIDE.md  HIERARCHY_SYSTEM_IMPLEMENTATION.md  HUD_CONVERTER_GUIDE.md  HUD_CONVERTER_IMPLEMENTATION.md  LAYOUT_SYSTEM.md  LUA_API.md  LUA_BINDINGS_IMPLEMENTATION.md  MASKING_SYSTEM.md  MIGRATION_DOCUMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_TESTING_SUMMARY.md  MIGRATION_TOOL_GUIDE.md  PREFAB_INSTANTIATION.md  README.md  SCROLL_VIEW_IMPLEMENTATION.md  STYLE_SYSTEM.md  TEXT_RENDERING_IMPLEMENTATION.md  VIDEO_TUTORIAL_SCRIPTS.md
ui/benches/: ui_performance.rs
ui/examples/: advanced_ui.rs  basic_ui.rs  hud_converter_demo.rs  layout_demo.rs  lua_ui_example.lua  prefab_demo.rs  style_demo.rs
ui/src/: canvas.rs  canvas_system.rs  dropdown_system.rs  hierarchy_system.rs  hud_converter.rs  input_field_system.rs  layout_system.rs  lib.rs  rect_transform.rs  rect_transform_system.rs  scroll_view_system.rs  slider_system.rs  style_system.rs  toggle_system.rs  types.rs
ui/tests/: event_system_integration.rs  migration_sample_tests.rs  migration_verification.rs  text_rendering_integration.rs
(+563 files in other folders)
