[workspace]
members = [
  "engine_core",
  "ecs",
  "render",
  "physics",
  "script",
  "input",
  "engine",
  "ui", 
  "sprite_editor",
  "editor",
]
resolver = "2"
default-members = ["engine"]

# Workspace dependencies for faster compilation and version consistency
[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
glam = { version = "0.30.9", features = ["serde"] }
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
egui_dock = { version = "0.12", features = ["serde"] }
egui_extras = { version = "0.27", features = ["image"] }
arboard = "3.4"
rfd = "0.14"
chrono = "0.4"
open = "5.0"
notify = "6.1"
notify-debouncer-full = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
rapier2d = "0.22"
gilrs = "0.11"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
tiled = "0.11"

# Dev dependencies
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.dev]
opt-level = 1  # Faster runtime during development, slightly slower compile
incremental = true  # Enable incremental compilation
split-debuginfo = "unpacked"  # Faster linking on Windows

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO is faster than full LTO with similar performance
codegen-units = 1  # Better optimization
strip = true  # Strip symbols for smaller binary
