[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiled = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
log = { workspace = true }
hecs = { version = "0.10", optional = true, features = ["serde"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "ecs_benchmark"
harness = false
