[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiled = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hecs = { version = "0.10", optional = true, features = ["serde"] }
specs = { version = "0.20", optional = true, features = ["serde"] }
bevy_ecs = { version = "0.12", optional = true }
engine_core = { version = "0.1.0", path = "../engine_core" }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
hecs = ["dep:hecs"]
specs = ["dep:specs"]
bevy = ["dep:bevy_ecs"]
all_backends = ["hecs", "specs", "bevy"]

[[bench]]
name = "ecs_benchmark"
harness = false
