[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[features]
default = ["rapier"]
rapier = []

[dependencies]
# Dependencies needed for Editor UI and Tools
engine = { path = "../engine" }
engine_core = { path = "../engine_core" }
ecs = { path = "../ecs" }
script = { path = "../script" }
physics = { path = "../physics", features = ["rapier"] }
render = { path = "../render" }
input = { path = "../input" }
sprite_editor = { path = "../sprite_editor" }
ui = { path = "../ui" }

# Third-party dependencies
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
arboard = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
wgpu = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

open = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
