[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_core = { path = "../engine_core" }
ecs = { path = "../ecs" }
script = { path = "../script" }
physics = { path = "../physics" }
render = { path = "../render" }
editor = { path = "../editor" }
input = { path = "../input" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
winit = "0.29"
pollster = "0.3"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
egui_dock = { version = "0.12", features = ["serde"] }
wgpu = "0.19"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
glam = { version = "0.30.9", features = ["serde"] }

[features]
default = []
