[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
engine_core = { path = "../engine_core" }
ecs = { path = "../ecs" }
script = { path = "../script" }
physics = { path = "../physics", features = ["rapier"] }
render = { path = "../render" }
editor = { path = "../editor" }
input = { path = "../input" }
sprite_editor = { path = "../sprite_editor" }
ui = { path = "../ui" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
winit = "0.29"
pollster = "0.3"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
egui_dock = { version = "0.12", features = ["serde"] }
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
wgpu = "0.19"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
glam = { version = "0.30.9", features = ["serde"] }
arboard = "3.4"
open = "5.0"
notify = "6.1"
notify-debouncer-full = "0.3"

[dev-dependencies]
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["rapier"]
rapier = ["physics/rapier"]

[[bench]]
name = "scene_view_performance"
harness = false
