[package]
name = "engine"
version = "0.1.0"
edition = "2021"
default-run = "engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine_core = { path = "../engine_core" }
ecs = { path = "../ecs" }
script = { path = "../script" }
physics = { path = "../physics", features = ["rapier"] }
render = { path = "../render" }
input = { path = "../input" }
sprite_editor = { path = "../sprite_editor" }
ui = { path = "../ui" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
wgpu = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
glam = { workspace = true }
arboard = { workspace = true }
open = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
bytemuck = { workspace = true }
gltf = "1.4.1"
bincode = "1.3.3"
lz4_flex = "0.12.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "Request", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[features]
default = ["rapier"]
rapier = ["physics/rapier"]
system-clipboard = []

[[bin]]
name = "player"
path = "src/bin/player.rs"

[[bench]]
name = "scene_view_performance"
harness = false
