[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
input = { path = "../input" }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

