[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"] }

[features]
default = []
enable_profiling = []
