[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
ecs = { path = "../ecs" }
bytemuck = { workspace = true }
glam = { workspace = true }
