[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { workspace = true }
anyhow = { workspace = true }
ecs = { path = "../ecs" }
input = { path = "../input" }
engine_core = { path = "../engine_core" }
log = { workspace = true }
pollster = { workspace = true }

[features]
default = []
rapier = []
