[package]
name = "sprite_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UI (optional)
egui = { workspace = true, optional = true }

# Utilities
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["editor_ui"]
editor_ui = ["egui"]
