[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
ecs = { path = "../ecs" }
render = { path = "../render" }

# Math and utilities
glam = { version = "0.25", features = ["serde"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Rendering (optional, for integration with render crate)
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

[features]
default = ["rendering"]
rendering = ["wgpu", "bytemuck"]

[dev-dependencies]
proptest = "1.4"
