[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
ecs = { path = "../ecs" }
render = { path = "../render" }

# Math and utilities
glam = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Lua scripting
mlua = { workspace = true }
anyhow = { workspace = true }

# Rendering (optional, for integration with render crate)
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# Binary dependencies (used by hud_migrator)
walkdir = { workspace = true }
clap = { workspace = true }

[features]
default = ["rendering"]
rendering = ["wgpu", "bytemuck"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "ui_performance"
harness = false
